test/official_tests/operator/add_bool_string.lox
true + "s"; // error: {"line":1,"message":"Operator '+': incompatible types 'boolean' and 'string'","type":"RuntimeError"}
